--- a/SlowLang.Engine/SlowLang.Engine.csproj
+++ b/SlowLang.Engine/SlowLang.Engine.csproj
@@ -5,7 +5,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <Title>SlowLangEngine</Title>
-        <PackageVersion>1.1.0</PackageVersion>
+        <PackageVersion>1.1.8</PackageVersion>
+        <Version>1.1.8</Version>
         <Authors>zenonet</Authors>
         <Description>An engine for creating simple programming languages in C#. Base of  SlowLang</Description>
         <RepositoryUrl>https://github.com/zenonet/SlowLangEngine</RepositoryUrl>
